[metadata]
name = plover_tapey_tape
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
    setuptools>=30.3.0
install_requires =
    plover>=4.0.0.dev10
py_modules =
    plover_tapey_tape

[options.entry_points]
plover.extension =
    plover_tapey_tape = plover_tapey_tape:TapeyTape
