[metadata]
name = plover_tapey_tape
version = 0.0.1
description = Paper tape with extra information
long_description = file: README.md
author = rabbitgrowth
license = GNU General Public License v3 (GPLv3)
url = https://github.com/rabbitgrowth/plover-tapey-tape
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
    setuptools>=30.3.0
install_requires =
    plover>=4.0.0.dev10
py_modules =
    plover_tapey_tape

[options.entry_points]
plover.extension =
    plover_tapey_tape = plover_tapey_tape:TapeyTape
